refactor: 활동 로그 메타데이터 불변 처리 보완