@@ -2,6 +2,8 @@ package back.backend.domain.collaboration.activitylog.dto;
 
 import back.backend.domain.collaboration.activitylog.entity.ActivityLog;
 import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 public record ActivityLogResponse(
@@ -18,7 +20,9 @@ public record ActivityLogResponse(
 ) {
 
     public ActivityLogResponse {
-        metadata = metadata == null ? null : Map.copyOf(metadata);
+        metadata = metadata == null
+                ? null
+                : Collections.unmodifiableMap(new LinkedHashMap<>(metadata));
     }
 
     public static ActivityLogResponse from(ActivityLog activityLog) {
